--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
   <header>
-    <h1>My Website</h1>
+    <h1>My Websitefirst </h1>
     <p>Welcome to the responsive HTML template</p>
     <p>Welcome to the responsive HTML template</p>
   </header>
