--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <h1>My Website first </h1>
     <p>Welcome to the responsive HTML template</p>
     <p>Welcome to the responsive HTML template</p>
+    <p>hello i m here </p>
   </header>
 
   <nav>
