--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <p>Welcome to the responsive HTML template</p>
     <p>Welcome to the responsive HTML template</p>
     <p>hello i m here </p>
+    <p>gjgaxjgscgs</p>
   </header>
 
   <nav>
